--- a/views/home.html
+++ b/views/home.html
@@ -6,15 +6,17 @@
         <h2>Home Page</h2>
     </head>
     <body>
-      <!-- <script>
+    <!-- <script>
        
        <nav>
         <ul>
-          <li><a href="/">ALBUMS LIST</a></li>
-          <li><a href="detail.html">INTRO</a></li>
-                   
-         </ul>
-            </nav>    
+            <li><a href="/">ALBUMS LIST</a></li>
+            <li><a href="detail.html">DETAILS</a></li>
+            <li><a href="add.html">ADD ALBUM</a></li>
+            <li><a href="delete.html">DELETE ALBUM</a></li>
+                
+            </ul>
+            </nav> 
     </script> -->
      
 <p>This is the Home Page to show our arrays.</p>
